--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -300,3 +300,45 @@ section {
     width: 400px;
     margin:auto 0;
 }
+
+/* EXPERIENCE SECTION*/
+
+#experience{
+    position: relative;
+}
+
+.experience-sub-title {
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.expirence-details-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+
+
+article {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+
+.article-icon {
+    cursor: default;
+}
+
+/* PROJECTS SECTION*/
