--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 html{
@@ -20,7 +20,8 @@ p{
 
 /*TRANSITION*/
 
-a, btn{
+a, 
+.btn{
     transition: all 300ms ease;
 }
 
@@ -41,7 +42,7 @@ nav {
     list-style: none;
     font-size: 1.5rem;
 }
-a{
+a {
     color: black;
     text-decoration: none;
     text-decoration-color: white;
@@ -51,11 +52,12 @@ a:hover{
     color: gray;
     text-decoration: underline;
     text-underline-offset: 1rem;
-    text-decoration-color: rgb(181,181,181)
+    text-decoration-color: rgb(181, 181, 181)
 }
 
 .logo{
-    font-size: 2em;
+    font-size: 2rem;
+    padding: 30px;
 }
 .logo:hover{
     cursor: default;
@@ -155,7 +157,7 @@ section {
 
 /*PROFILE SECTION*/
 
-#profile{
+#profile {
     display: flex;
     justify-content: center;
     gap: 5rem;
@@ -204,7 +206,7 @@ section {
     height: 2rem;
 }
 
-/* ИГЕЕЩТЫ */
+/* BUTTONS */
 
 .btn-container {
     display: flex;
@@ -342,3 +344,76 @@ article {
 }
 
 /* PROJECTS SECTION*/
+
+#projects {
+    position: relative;
+}
+
+.color-container {
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+}
+
+.project-img {
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+}
+
+.project-title {
+    margin: 1rem;
+    color: black;
+}
+
+.project-btn {
+    color: black;
+    border-color: rgb(163, 163, 163);    
+}
+
+/* CONTACT */
+
+#contact {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container {
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: (250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+
+.contact-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container {
+    font-size: larger;
+}
+
+.contact-icon {
+    cursor: default;
+    height: 2rem;
+}
+
+/* FOOTER SECTION */
+
+footer {
+    height: 26hv;
+    margin-bottom: 4rem;
+}
+
+footer p {
+    text-align: center;
+}
