--- a/portfolio/mediaqueries.css
+++ b/portfolio/mediaqueries.css
@@ -15,6 +15,10 @@
     #hamburger-nav{
         display: flex;
     }
+    .hamburger-menu{
+        margin: 3rem;
+    }
+    
     #experience, 
     .experience-details-container {
         margin-top: 2rem;
@@ -33,4 +37,78 @@
     section {
         margin: 0 5%;
     }
+
+    .section__pic-container {
+        width: 275px;
+        height: 275px;
+        margin: 0 auto 2rem;
+    }
+
+    .about-containers {
+        margin-top: 0;
+    }
+    footer p {
+        text-align: center;
+        margin: 2rem;
+        font-size: 12px;
+    }
+
 }
+
+@media screen and (max-width: 600px) {
+    #contact, footer {
+        height: 40vh;
+        margin-bottom: 0;
+    }
+    #profile {
+        height: 83vh;
+        margin-bottom: 0;
+    }
+    article {
+        font-size: 1rem;
+    }
+    footer nav {
+        height: fit-content;
+        margin-bottom: 2rem;
+    }
+    .about-containers, 
+    .contact-info-upper-container, 
+    .btn-container {
+        flex-wrap: wrap;
+    }
+    .contact-info-container {
+        margin: 0;
+    }
+    .contact-info-container p, .nav-links li a {
+        font-size: 1rem;
+    }
+    .experience-sub-title {
+        font-size: 1.25rem;
+    }
+    .logo {
+        font-size: 1.5rem;
+    }
+    .nav-links {
+        flex-direction: column;
+        gap: 0.5rem;
+        text-align: center;
+    }
+
+    .section__pic-container {
+        width: auto;
+        height: 46vw;
+        justify-content: center;
+    }
+
+    .section-text__p2 {
+        font-size: 1.25rem;
+    }
+    .title {
+    font-size: 2rem;
+    }
+    .text-container {
+        text-align: justify;
+    }
+   
+}
+  
