--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -316,7 +316,7 @@ section {
     margin-bottom: 2rem;
 }
 
-.expirence-details-container {
+.experience-details-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -328,14 +328,14 @@ section {
     flex-wrap: wrap;
     flex-direction: row;
     gap: 2.5rem;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 
 article {
     display: flex;
     width: 10rem;
-    justify-content: space-around;
+    align-items: center;
     gap: 0.5rem;
 }
 
@@ -356,8 +356,8 @@ article {
 
 .project-img {
     border-radius: 2rem;
-    width: 90%;
-    height: 90%;
+    max-width: 800px;
+   
 }
 
 .project-title {
@@ -388,6 +388,8 @@ article {
     background: (250, 250, 250);
     margin: 2rem auto;
     padding: 0.5rem;
+    flex-wrap: wrap;
+    gap: 1rem;
 }
 
 .contact-info-container {
