--- a/portfolio/mediaqueries.css
+++ b/portfolio/mediaqueries.css
@@ -47,6 +47,13 @@
     .about-containers {
         margin-top: 0;
     }
+    .project-img {        
+        max-width: 600px;
+    }
+    /* .contact-info-upper-container {
+        flex-direction: column;
+        gap: 2rem;
+    } */
     footer p {
         text-align: center;
         margin: 2rem;
@@ -67,6 +74,10 @@
     article {
         font-size: 1rem;
     }
+    .icon {
+       
+        height: 1.6rem;
+    }
     footer nav {
         height: fit-content;
         margin-bottom: 2rem;
@@ -75,6 +86,10 @@
     .contact-info-upper-container, 
     .btn-container {
         flex-wrap: wrap;
+    }
+    .contact-info-upper-container {
+        flex-direction: column;
+        gap: 1rem;
     }
     .contact-info-container {
         margin: 0;
@@ -108,6 +123,9 @@
     }
     .text-container {
         text-align: justify;
+    }
+    .project-img {        
+        max-width: 300px;
     }
    
 }
