--- a/portfolio/mediaqueries.css
+++ b/portfolio/mediaqueries.css
@@ -1,136 +1,140 @@
 @media screen and (max-width: 1400px) {
-    #profile {
-      height: 83vh;
-      margin-bottom: 6rem;
-    }
-    .about-containers {
-      flex-wrap: wrap;
-    }
- }
- 
- @media screen and (max-width: 1200px) {
-     #desktop-nav{
-         display: none;
-     }
-     #hamburger-nav{
-         display: flex;
-     }
-     .hamburger-menu{
-         margin: 3rem;
-     }
-     
-     #experience, 
-     .experience-details-container {
-         margin-top: 2rem;
-     }
-     #profile, 
-     .section-container {
-         display: block;
-     }
-     .arrow {
-         display: none;
-     }
-     section, 
-     .section-container {
-         height: fit-content;
-     }
-     section {
-         margin: 0 5%;
-     }
- 
-     .section__pic-container {
-         width: 275px;
-         height: 275px;
-         margin: 0 auto 2rem;
-     }
- 
-     .about-containers {
-         margin-top: 0;
-     }
-     .project-img {        
-         max-width: 600px;
-     }
-    
-     footer p {
-         text-align: center;
-         margin: 2rem;
-         font-size: 12px;
-     }
- 
- }
- 
- @media screen and (max-width: 600px) {
-     #contact, footer {
-         height: 40vh;
-         margin-bottom: 0;
-     }
-     #profile {
-         height: 83vh;
-         margin-bottom: 0;
-     }
-     article {
-         font-size: 1rem;
-     }
-     .icon {
-        
-         height: 1.6rem;
-     }
-     .logo {
-        margin-left: 1.5rem;
-     }
-     footer nav {
-         height: fit-content;
-         margin-bottom: 2rem;
-     }
-     #about {
-         margin-top: 1rem;
-     }
-     .about-containers, 
-     .contact-info-upper-container, 
-     .btn-container {
-         flex-wrap: wrap;
-     }
-     .contact-info-upper-container {
-         flex-direction: column;
-         gap: 1rem;
-     }
-     .contact-info-container {
-         margin: 0;
-     }
-     .contact-info-container p, .nav-links li a {
-         font-size: 1rem;
-     }
-     .experience-sub-title {
-         font-size: 1.25rem;
-     }
-     .logo {
-         font-size: 1.5rem;
-     }
-     .nav-links {
-         flex-direction: column;
-         gap: 0.5rem;
-         text-align: center;
-         margin-top: 1rem;
-     }
- 
- 
-     .section__pic-container {
-         width: auto;
-         height: 46vw;
-         justify-content: center;
-     }
- 
-     .section-text__p2 {
-         font-size: 1.25rem;
-     }
-     .title {
-     font-size: 2rem;
-     }
-     .text-container {
-         text-align: justify;
-     }
-     .project-img {        
-         max-width: 200px;
-     }
-    
- }
+  #profile {
+    height: 83vh;
+    margin-bottom: 6rem;
+  }
+  .about-containers {
+    flex-wrap: wrap;
+  }
+  .details-container {
+    padding: 1rem;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  #desktop-nav {
+    display: none;
+  }
+  #hamburger-nav {
+    display: flex;
+  }
+  .hamburger-menu {
+    margin: 3rem;
+  }
+
+  #experience,
+  .experience-details-container {
+    margin-top: 2rem;
+  }
+  #profile {
+    height: fit-content;
+  }
+  #profile,
+  .section-container {
+    display: block;
+  }
+  .arrow {
+    display: none;
+  }
+  section,
+  .section-container {
+    height: fit-content;
+  }
+  section {
+    margin: 0 5%;
+  }
+
+  .section__pic-container {
+    width: 275px;
+    height: 275px;
+    margin: 0 auto 2rem;
+  }
+
+  .about-containers {
+    margin-top: 1rem;
+  }
+  .project-img {
+    max-width: 100%;
+  }
+
+  footer p {
+    text-align: center;
+    margin: 2rem;
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #contact,
+  footer {
+    height: 40vh;
+    margin-bottom: 0;
+  }
+  #profile {
+    height: 83vh;
+    margin-bottom: 0;
+  }
+  article {
+    font-size: 1rem;
+  }
+  .icon {
+    height: 1.6rem;
+  }
+  .logo {
+    padding-left: 1.5rem;
+  }
+  footer nav {
+    height: fit-content;
+    margin-bottom: 2rem;
+  }
+  #about {
+    margin-top: 1rem;
+  }
+  .about-containers,
+  .contact-info-upper-container,
+  .btn-container {
+    flex-wrap: wrap;
+  }
+  .contact-info-upper-container {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .contact-info-container {
+    margin: 0;
+  }
+  .contact-info-container p,
+  .nav-links li a {
+    font-size: 1rem;
+  }
+  .experience-sub-title {
+    font-size: 1.25rem;
+  }
+  .logo {
+    font-size: 1.5rem;
+  }
+  .nav-links {
+    flex-direction: column;
+    gap: 0.5rem;
+    text-align: center;
+    margin-top: 1rem;
+  }
+
+  .section__pic-container {
+    width: auto;
+    height: 46vw;
+    justify-content: center;
+  }
+
+  .section-text__p2 {
+    font-size: 1.25rem;
+  }
+  .title {
+    font-size: 2rem;
+  }
+  .text-container {
+    text-align: justify;
+  }
+  .project-img {
+    max-width: 100%;
+  }
+}
