add to portfolio lang

--- a/portfolio/mediaqueries.css
+++ b/portfolio/mediaqueries.css
@@ -112,6 +112,10 @@
   .logo {
     font-size: 1.5rem;
   }
+
+  .lang {
+    display: inline;
+  }
   .nav-links {
     flex-direction: column;
     gap: 0.5rem;
